--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -423,6 +423,8 @@
       items:
         - name: Azure VM
           href: backup-azure-vms-troubleshoot.md
+        - name: Azure VM ファイルの回復
+          href: backup-azure-vm-file-recovery-troubleshoot.md
         - name: Azure Backup エージェントまたは VM 拡張機能がタイムアウトした
           href: backup-azure-troubleshoot-vm-backup-fails-snapshot-timeout.md
         - name: Azure Backup エージェント
