--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -95,8 +95,6 @@
       href: user-overview.md
     - name: ユーザー プロファイルの属性
       href: user-profile-attributes.md
-    - name: SSO セッション
-      href: session-overview.md
     - name: Identity Protection と条件付きアクセス
       href: conditional-access-identity-protection-overview.md
 - name: 操作方法ガイド
@@ -155,6 +153,8 @@
           href: identity-provider-wechat.md
         - name: Weibo
           href: identity-provider-weibo.md
+        - name: ID プロバイダー トークンのパススルー
+          href: idp-pass-through-user-flow.md
     - name: UX のカスタマイズ
       items:
         - name: ユーザー入力の構成
@@ -174,6 +174,24 @@
         - name: MFA の有効化
           href: multi-factor-authentication.md
           displayName: multi-factor auth
+        - name: 直接サインインの設定
+          href: direct-signin.md
+    - name: トークンおよびセッション管理
+      items:
+        - name: セッションの動作を構成する
+          href: session-behavior.md
+        - name: トークンを構成する
+          href: configure-tokens.md
+    - name: カスタム属性を定義する
+      href: user-flow-custom-attributes.md
+    - name: Identity Protection と条件付きアクセス
+      items:
+        - name: Identity Protection と条件付きアクセスを設定する
+          href: conditional-access-identity-protection-setup.md
+        - name: 条件付きアクセスの追加
+          href: conditional-access-user-flow.md
+    - name: 年齢制限を構成する
+      href: basic-age-gating.md
     - name: ユーザー フロー
       items:
         - name: フローを作成する
@@ -184,40 +202,23 @@
               href: configure-ropc.md
             - name: セルフサービス パスワードのリセットの設定
               href: user-flow-self-service-password-reset.md
-        - name: 条件付きアクセスの追加
-          href: conditional-access-user-flow.md
-        - name: トークンおよびセッション管理
-          items:
-            - name: トークンを構成する
-              href: configure-tokens.md
-            - name: セッションの動作を構成する
-              href: session-behavior.md
-        - name: 年齢制限を構成する
-          href: basic-age-gating.md
-        - name: カスタム属性を定義する
-          href: user-flow-custom-attributes.md
         - name: API コネクタ (プレビュー)
           items:
             - name: 概要
               href: api-connectors-overview.md
             - name: API コネクタを追加する
               href: add-api-connector.md
-        - name: 外部 IdP トークンをパススルーする
-          href: idp-pass-through-user-flow.md
-    - name: Identity Protection と条件付きアクセス
-      href: conditional-access-identity-protection-setup.md
     - name: カスタム ポリシー
       items:
+        - name: カスタム ポリシーの概要
+          href: custom-policy-trust-frameworks.md
+        - name: カスタム ポリシーの概要
+          href: custom-policy-get-started.md
         - name: ポリシーの作成
           items:
-            - name: カスタム ポリシーの概要
-              href: custom-policy-get-started.md
             - name: リソース所有者のパスワード資格情報
               href: ropc-custom.md
               displayName: ropc
-            - name: '[サインインしたままにする] の有効化'
-              href: custom-policy-keep-me-signed-in.md
-              displayName: kmsi
             - name: パスワードの変更
               href: custom-policy-password-change.md
             - name: 電話でのサインアップとサインイン
@@ -230,18 +231,6 @@
             - name: SendGrid
               href: custom-email-sendgrid.md
           displayName: verification
-        - name: トークンおよびセッション管理
-          items:
-            - name: トークンのカスタマイズ
-              href: configure-tokens-custom-policy.md
-            - name: セッションの動作を構成する
-              href: session-behavior-custom-policy.md
-        - name: 外部 IdP トークンをパススルーする
-          href: idp-pass-through-custom.md
-        - name: アダプティブなエクスペリエンス
-          items:
-            - name: 直接サインインの設定
-              href: direct-signin.md
         - name: 独自のビジネス ロジックの追加
           items:
             - name: REST API の統合
@@ -254,8 +243,6 @@
               displayName: rest claims exchange
             - name: REST API のセキュリティ保護
               href: secure-rest-api.md
-        - name: カスタム属性を定義する
-          href: custom-policy-custom-attributes.md
         - name: トラブルシューティング
           items:
             - name: Application Insights を使用したログの収集
@@ -268,8 +255,6 @@
           href: analytics-with-application-insights.md
         - name: リファレンス
           items:
-            - name: 信頼フレームワークの定義
-              href: custom-policy-trust-frameworks.md
             - name: TrustFrameworkPolicy
               href: trustframeworkpolicy.md
             - name: BuildingBlocks
@@ -315,11 +300,9 @@
             - name: ClaimsProviders
               href: claimsproviders.md
               items:
-                - name: TechnicalProfiles
+                - name: 技術プロファイル
                   href: technicalprofiles.md
                   items:
-                    - name: 技術プロファイルについて
-                      href: technical-profiles-overview.md
                     - name: 検証技術プロファイルとは
                       href: validation-technical-profile.md
                     - name: Application Insights
@@ -370,6 +353,8 @@
               href: relyingparty.md
             - name: 要求リゾルバー
               href: claim-resolver-overview.md
+    - name: UserInfo エンドポイント
+      href: userinfo-endpoint.md
     - name: パートナー統合
       items:
         - name: Azure AD B2C パートナー ギャラリー
