--- a/articles/cognitive-services/Face/index.yml
+++ b/articles/cognitive-services/Face/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 9/01/2020
-  ms.openlocfilehash: cfdb210c6181ed49d3f4c1919a3cb784a2391c19
-  ms.sourcegitcommit: c2dd51aeaec24cd18f2e4e77d268de5bcc89e4a7
+  ms.openlocfilehash: 4ec184d713ac6fffbfa83072c733444ebf9130f6
+  ms.sourcegitcommit: 77ab078e255034bd1a8db499eec6fe9b093a8e4f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "94740652"
+  ms.lasthandoff: 12/16/2020
+  ms.locfileid: "97560628"
 landingContent:
 - title: Face サービスについて
   linkLists:
@@ -24,6 +24,10 @@ landingContent:
     links:
     - text: Face サービスとは
       url: Overview.md
+  - linkListType: whats-new
+    links:
+    - text: Face サービスの新機能
+      url: releasenotes.md
 - title: 顔を検出する
   linkLists:
   - linkListType: concept
