commit translated contents

--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -10,17 +10,20 @@ metadata:
   author: MGoedtel
   ms.author: magoedte
   ms.date: 09/23/2020
-  ms.openlocfilehash: fc48de7ec0be6ce451caff91533dc24606a1e66c
-  ms.sourcegitcommit: ae6e7057a00d95ed7b828fc8846e3a6281859d40
+  ms.openlocfilehash: 14f7497d350da7afb3d3767340ff593e2b411194
+  ms.sourcegitcommit: 86acfdc2020e44d121d498f0b1013c4c3903d3f3
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/16/2020
-  ms.locfileid: "92103069"
+  ms.lasthandoff: 12/17/2020
+  ms.locfileid: "97616985"
 highlightedContent:
   items:
   - title: Azure Arc について
     itemType: overview
     url: overview.md
+  - title: ジャンプスタート
+    itemType: quickstart
+    url: https://azurearcjumpstart.io/overview/
   - title: Azure Arc 対応サーバー
     itemType: overview
     url: ./servers/overview.md
