--- a/articles/active-directory/user-help/toc.yml
+++ b/articles/active-directory/user-help/toc.yml
@@ -112,6 +112,8 @@
       href: my-apps-portal-end-user-groups.md
     - name: コレクションを使用してアプリを整理する
       href: my-applications-portal-workspaces.md
+    - name: マイ アプリでのコレクションのプレビュー
+      href: my-apps-portal-user-collections.md
     - name: アプリのアクセス許可の編集または取り消し
       href: my-applications-portal-permissions-saved-accounts.md
     - name: 自分のアクセス レビューを実行する
