--- a/articles/azure-arc/data/index.yml
+++ b/articles/azure-arc/data/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.topic: landing-page
   author: MikeRayMSFT
   ms.author: mikeray
-  ms.date: 09/22/2020
-  ms.openlocfilehash: 3ef94bfc9d3870c4c91116fb2aaf26387999a8da
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.date: 12/16/2020
+  ms.openlocfilehash: d36112882fd134fc16ae6c8b463114ec2bbef447
+  ms.sourcegitcommit: 86acfdc2020e44d121d498f0b1013c4c3903d3f3
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90928922"
+  ms.lasthandoff: 12/17/2020
+  ms.locfileid: "97615911"
 landingContent:
 - title: 詳細
   linkLists:
@@ -33,6 +33,8 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
+    - text: ジャンプスタート
+      url: https://azurearcjumpstart.io/azure_arc_jumpstart/azure_arc_data/
     - text: データ コントローラーの作成
       url: create-data-controller.md
     - text: クライアント ツールのインストール
