--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -408,6 +408,9 @@
           href: how-to-configure-auto-train.md
         - name: 自動 ML を使用する (インターフェイス)
           href: how-to-use-automated-ml-for-ml-models.md
+        - name: Databricks で自動 ML を使用する
+          displayName: automl
+          href: how-to-configure-databricks-automl-environment.md
         - name: リモート コンピューティング ターゲットを使用する
           displayName: automl automated auto ml
           href: how-to-auto-train-remote.md
@@ -463,6 +466,8 @@
               href: how-to-deploy-fpga-web-service.md
         - name: トラブルシューティングとデバッグ
           href: how-to-troubleshoot-deployment.md
+        - name: トラブルシューティングとデバッグ (ローカル)
+          href: how-to-troubleshoot-deployment-local.md
         - name: Web サービスを使用する
           displayName: create client consume request response synchronous
           href: how-to-consume-web-service.md
