--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -188,15 +188,15 @@
               href: manage/pay-by-invoice.md
             - name: 追加のサブスクリプションを作成する
               href: manage/create-subscription.md
-            - name: EA サブスクリプションを作成する - REST
+            - name: プログラムによる EA サブスクリプションの作成
               href: manage/programmatically-create-subscription-enterprise-agreement.md
-            - name: MCA サブスクリプションを作成する - REST
+            - name: プログラムによる MCA サブスクリプションの作成
               href: manage/programmatically-create-subscription-microsoft-customer-agreement.md
-            - name: MPA サブスクリプションを作成する - REST
+            - name: プログラムによる MPA サブスクリプションの作成
               href: manage/programmatically-create-subscription-microsoft-partner-agreement.md
             - name: サブスクリプションを作成する - ARM テンプレート
               href: manage/create-subscription-template.md
-            - name: サブスクリプションを作成する - プレビュー REST
+            - name: プログラムによるサブスクリプションの作成 - プレビュー
               href: manage/programmatically-create-subscription-preview.md
             - name: EA サブスクリプションを作成するためのアクセスを許可する
               href: manage/grant-access-to-create-subscription.md
