--- a/articles/azure-arc/kubernetes/index.yml
+++ b/articles/azure-arc/kubernetes/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 06/26/2020
   ms.author: 
-  ms.openlocfilehash: 88d9ba51815496e7d8ec4ab3d22195c5b42c317b
-  ms.sourcegitcommit: 86acfdc2020e44d121d498f0b1013c4c3903d3f3
+  ms.openlocfilehash: 9eeddfefe451eb524484df8a1986c7ec736c4c0f
+  ms.sourcegitcommit: d79513b2589a62c52bddd9c7bd0b4d6498805dbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/17/2020
-  ms.locfileid: "97616968"
+  ms.lasthandoff: 12/18/2020
+  ms.locfileid: "97674374"
 landingContent:
 - title: Azure Arc を使用して Kubernetes クラスターを Azure に接続する
   linkLists:
@@ -24,8 +24,6 @@ landingContent:
       url: overview.md
   - linkListType: quickstart
     links:
-    - text: ジャンプスタート
-      url: https://azurearcjumpstart.io/azure_arc_jumpstart/azure_arc_k8s/
     - text: クラスターの接続
       url: connect-cluster.md
   - linkListType: how-to-guide
@@ -38,6 +36,12 @@ landingContent:
       url: use-azure-policy.md
     - text: Azure IoT Edge ワークロードをデプロイする
       url: deploy-azure-iot-edge-workloads.md
+- title: 概念実証
+  linkLists:
+  - linkListType: sample
+    links:
+    - text: ジャンプスタート
+      url: https://azurearcjumpstart.io/azure_arc_jumpstart/azure_arc_k8s/
 - title: 参照アーキテクチャ
   linkLists:
   - linkListType: architecture
