--- a/articles/azure-arc/servers/index.yml
+++ b/articles/azure-arc/servers/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 10/07/2020
   ms.author: magoedte
-  ms.openlocfilehash: 25d70341fb96e6458a15770ab49c28f3e8248385
-  ms.sourcegitcommit: 86acfdc2020e44d121d498f0b1013c4c3903d3f3
+  ms.openlocfilehash: 3bdb85eea2f1227a566041badf11539923e7df44
+  ms.sourcegitcommit: d79513b2589a62c52bddd9c7bd0b4d6498805dbe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/17/2020
-  ms.locfileid: "97615632"
+  ms.lasthandoff: 12/18/2020
+  ms.locfileid: "97672476"
 landingContent:
 - title: Azure Arc 対応サーバーを使用してマシンを Azure に接続する
   linkLists:
@@ -24,8 +24,6 @@ landingContent:
       url: overview.md
   - linkListType: get-started
     links:
-    - text: ジャンプスタート
-      url: https://azurearcjumpstart.io/azure_arc_jumpstart/azure_arc_servers/
     - text: Azure portal から Azure Arc へのマシンの接続
       url: onboard-portal.md
     - text: サービス プリンシパルを使用したマシンの大規模な接続
@@ -38,6 +36,12 @@ landingContent:
     links:
     - text: Arc 対応サーバー エージェントをデプロイする
       url: ./learn/quick-enable-hybrid-vm.md
+- title: 概念実証
+  linkLists:
+  - linkListType: sample
+    links:
+    - text: ジャンプスタート
+      url: https://azurearcjumpstart.io/azure_arc_jumpstart/azure_arc_servers/
 - title: 参照アーキテクチャ
   linkLists:
   - linkListType: architecture
