Update TOC.yml (Back-Translation "コア ツールの開発"→"Core Tools での開発")
https://docs.microsoft.com/ja-jp/azure/azure-functions/functions-run-local?tabs=windows%2Ccsharp%2Cbash

--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -173,7 +173,7 @@
               href: functions-develop-vs-code.md
             - name: Visual Studio 開発
               href: functions-develop-vs.md
-            - name: コア ツールの開発
+            - name: Core Tools での開発
               href: functions-run-local.md
               displayName: 'local, runtime'
         - name: 関数の作成
