Typo "Visual Studio 開発"→"Visual Studio での開発"

--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -171,7 +171,7 @@
               href: functions-develop-local.md
             - name: Visual Studio Code での開発
               href: functions-develop-vs-code.md
-            - name: Visual Studio 開発
+            - name: Visual Studio での開発
               href: functions-develop-vs.md
             - name: Core Tools での開発
               href: functions-run-local.md
