commit translated contents

--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -507,7 +507,8 @@
           href: speech-container-howto-on-premises.md
         - name: Azure Container Instances 上の Speech コンテナー
           displayName: 'ACI,azure container instances,container instances,containers'
-          href: deploy-speech-on-container-instances.md
+          maintainContext: true
+          href: ../containers/azure-container-instance-recipe.md
         - name: コンテナーの FAQ
           href: speech-container-faq.md
         - name: Cognitive Services コンテナーのドキュメント
