--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -15,6 +15,8 @@
       href: cognitive-services-custom-subdomains.md
     - name: 言語のサポート
       href: language-support.md
+    - name: コストの計画と管理
+      href: plan-manage-costs.md
 - name: クイックスタート
   items:
     - name: Azure portal を使用して新しいリソースを作成する
