--- a/articles/cognitive-services/Face/toc.yml
+++ b/articles/cognitive-services/Face/toc.yml
@@ -48,7 +48,8 @@
         - name: コンテナーを構成する
           href: face-resource-container-config.md
         - name: Container Instances の使用
-          href: Face-API-How-to-Topics/deploy-face-container-on-container-instances.md
+          maintainContext: true
+          href: ../containers/azure-container-instance-recipe.md
         - name: Cognitive Services コンテナーのドキュメント
           href: ../containers/index.yml
 - name: シナリオの詳細
