--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -142,7 +142,7 @@
           items:
             - name: シノニムの追加
               href: search-synonyms.md
-            - name: シノニムの例
+            - name: シノニム C# の例
               href: search-synonyms-tutorial-sdk.md
         - name: 複合データ型をモデル化する
           href: search-howto-complex-data-types.md
