commit translated contents

--- a/articles/key-vault/keys/toc.yml
+++ b/articles/key-vault/keys/toc.yml
@@ -19,6 +19,8 @@
       href: quick-create-node.md
     - name: Python
       href: quick-create-python.md
+    - name: Java
+      href: quick-create-java.md
     - name: ARM テンプレート
       displayName: Resource Manager
       href: quick-create-template.md
