--- a/articles/azure-functions/durable/TOC.yml
+++ b/articles/azure-functions/durable/TOC.yml
@@ -91,6 +91,8 @@
       href: /dotnet/api/microsoft.azure.webjobs.extensions.durabletask?view=azure-dotnet
     - name: Node.js API
       href: /javascript/api/durable-functions/?view=azure-node-latest
+    - name: Python API
+      href: /python/api/azure-functions-durable/azure.durable_functions?view=azure-python
 - name: 操作方法ガイド
   items:
     - name: 開発
